--- a/www/views/home/home-carousel/home-carousel.scss
+++ b/www/views/home/home-carousel/home-carousel.scss
@@ -57,7 +57,7 @@ home-carousel {
                         padding-top:31%;
                         height: 100%;
                         * {
-                            z-index: 4;
+                            // z-index: 4;
                             filter: grayscale(0);
                         }
                         .title {
@@ -396,7 +396,7 @@ home-carousel {
                             }
                             .container {
                                 * {
-                                    z-index: 4;
+                                    // z-index: 4;
                                     filter: grayscale(0);
                                 }
                                 .title {
